odevzdani/tests/invalid_syn/syn02.java
class Main {
	class Main2 {
		static void run() {
			int c = 5;
		}
	}
	static int b = 5;
}
